// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CDN provider access policy construct for the media bucket - it should create a cdn provider access policy without a default IAM user. 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "testbucketE6E05ABE": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "testcdnprovideraccesspolicyAccessPolicyACF8C570": {
      "Properties": {
        "Groups": [
          {
            "Ref": "testcdnprovideraccesspolicyGroupBE650587",
          },
        ],
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject",
                "s3:ListBucket",
                "s3:GetBucketLocation",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "testbucketE6E05ABE",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "testbucketE6E05ABE",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcdnprovideraccesspolicyAccessPolicyACF8C570",
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcdnprovideraccesspolicyGroupBE650587": {
      "Type": "AWS::IAM::Group",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`CDN provider access policy construct for the media bucket - it should create a default cdn provider access policy. 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "testbucketE6E05ABE": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "testcdnprovideraccesspolicyAccessPolicyACF8C570": {
      "Properties": {
        "Groups": [
          {
            "Ref": "testcdnprovideraccesspolicyGroupBE650587",
          },
        ],
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject",
                "s3:ListBucket",
                "s3:GetBucketLocation",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "testbucketE6E05ABE",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "testbucketE6E05ABE",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcdnprovideraccesspolicyAccessPolicyACF8C570",
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcdnprovideraccesspolicyGroupBE650587": {
      "Type": "AWS::IAM::Group",
    },
    "testcdnprovideraccesspolicyUserA4A3C503": {
      "Properties": {
        "Groups": [
          {
            "Ref": "testcdnprovideraccesspolicyGroupBE650587",
          },
        ],
      },
      "Type": "AWS::IAM::User",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
